[package]
name = "neon-rodio"
version = "0.1.0"
authors = ["YXL <chenxin.lan.76@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "neon_rodio"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.5.3"

[dependencies]
neon = "0.5.2"
rodio = "0.11.0"

[profile.release]
lto = true
